<resources>
    <string name="app_name">StudentAppointment</string>
    <string name="tasks">Appointment</string>
    <string name="actshow">Activity</string>
    <string name="act">Activities</string>
    <string name="locations">Locations</string>

    <string name="task_title">Title</string>
    <string name="new_task">New Appointment</string>
    <string name="task">Task</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="no_task">No Appointment</string>
    <string name="no_act">No Activity</string>
    <string name="no_location">No Location</string>
    <string name="no_contact">No Contact</string>
    <string name="task_content">Content</string>
    <string name="unsaved_exit_alert">You have unsaved data. Are you sure you want to exit?</string>
    <string name="title_is_required">Date is required.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="edit_task">Edit Task</string>
    <string name="contact_person">Contact Person</string>
    <string name="contactDetail">Contact Detail</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="date_start">Date Start</string>
    <string name="date_end">Date End</string>
    <string name="actDefult">ชื่อกิจกรรม</string>
    <string name="new_activity">New activity</string>
    <string name="new_location">New location</string>
    <string name="new_status">New status</string>
    <string name="new_contact">New contact</string>
    <string name="edit_activity">Edit activity</string>
    <string name="edit_location">Edit location</string>
    <string name="edit_status">Edit status</string>
    <string name="edit_contact">Edit contact</string>
    <string name="spinner_title">Spinner</string>
    <string name="location">Location</string>
    <string name="locationDefult">ชื่อสถานที่</string>
    <string name="status">Your Status</string>
    <string name="firsNameDefult">ชื่อ</string>
    <string name="lastNameDefult">สกุล</string>
    <string name="activity_is_required">activity is required.</string>
    <string name="location_is_required">location is required.</string>
    <string name="contact_is_required">name is required.</string>
    <string name="setting_Activity">Activity</string>
    <string name="setting_Location">Location</string>
    <string name="setting_Contact">Contact</string>
    <string name="about_us">About Us</string>
    <string name="setting_home">HOME</string>


    <string name="phone">Phone</string>
    <string name="computer">Computer</string>
    <string name="gamepad">Gamepad</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="email">EMail</string>

    <!-- Form Activity page-->
    <string name="FormAct">Activity :</string>
    <string name="FormContact">Contact :</string>
    <string name="FormLocation">Location :</string>
    <string name="FormStatus">Status :</string>



    <string name="action_settings">Settings</string>

    <string-array name="statusar">
        <item>INCOMPLETE</item>
        <item>CANCEL</item>
        <item>COMPLETE</item>
    </string-array>

</resources>
