<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorbk"
    tools:context="project.ann.pee.studentappointment.FormActivity">

    <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />
   <include android:id="@+id/tb_buttom" layout="@layout/toolbar_buttom"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_gravity="center_horizontal"
    android:id="@+id/relativeLayout"
    android:layout_below="@+id/toolbar_main"
    android:layout_alignParentStart="true">


</RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:paddingLeft="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        >
        <Spinner
            android:id="@+id/titleEdit"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_below="@+id/relativeLayout3"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_below="@+id/relativeLayout3"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/locationEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_below="@+id/relativeLayout3"
            android:layout_alignParentStart="true" />

    </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:paddingLeft="@dimen/activity_horizontal_margin">




    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout2"
        android:layout_alignEnd="@+id/add_title"
        android:layout_below="@+id/relativeLayout3">



        <android.support.design.widget.TextInputLayout
            android:layout_width="269dp"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>








        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/contentEdit"
                android:hint="@string/task_content"
                />
        </android.support.design.widget.TextInputLayout>





        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateStart"
            android:layout_gravity="center_horizontal"
            android:hint="@string/date_start"
            />
            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/timeStart"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/time_start"
                    />
        </android.support.design.widget.TextInputLayout>

    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dateEnd"
                android:layout_gravity="center_horizontal"
                android:hint="@string/date_end"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/timeEnd"
                android:layout_gravity="center_horizontal"
                android:hint="@string/time_end"
                />
        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_contact"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/add_title"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_location"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_title"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
